--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Шапка сторінки -->
 
-    <header class="page-header">
+    <header class="page-header page-header-mobile">
         <div class="container container-header">
             <nav class="page-navigation">
                 <a href="./index.html" class="logo link">Web<span class="logo-studio">Studio</span>
@@ -455,8 +455,8 @@
                         solutions.
                     </p>
 
-                </div>
-                <div class="social-list-footer-mobile">
+                 </div>
+                 <div class="social-list-footer-mobile">
                     <p class="paragraf">Social media</p>
                     <ul class="social-list-footer list">
                         <li class="social-list-footer">
